# adon-gui-wallet

./: .appveyor.yml  .gitignore  .gitmodules  CMakeLists.txt  CryptoNoteWallet.cmake  README.md  ReleaseNotes.txt  cryptonote
Platform/Linux/: ApplicationEventHandler.cpp  ApplicationEventHandler.h
Platform/OSX/: ApplicationEventHandler.h  ApplicationEventHandler.mm  INotificationMonitorObserver.h  NotificationMonitor.h  NotificationMonitor.mm  WalletApplication.mm
Platform/Posix/System/: MemoryMappedFile.cpp  MemoryMappedFile.h
Platform/Windows/: ApplicationEventHandler.cpp  ApplicationEventHandler.h
include/: IAddressBookManager.h  IWalletAdapter.h
src/: adon.desktop  adon.qss  adon.rc  main.cpp  miniupnpcstrings.h  resources.qrc
src/Application/: AddressBookManager.cpp  AddressBookManager.h  BlogReader.cpp  BlogReader.h  CommandLineParser.cpp  CommandLineParser.h  IWalletUiItem.h  LogFileWatcher.cpp  LogFileWatcher.h  MiningManager.cpp  MiningManager.h  OptimizationManager.cpp  OptimizationManager.h  SignalHandler.cpp  SignalHandler.h  WalletApplication.cpp  WalletApplication.h  WalletSplashScreen.cpp  WalletSplashScreen.h
src/CryptoNoteWrapper/: BlockChainExplorerAdapter.cpp  BlockChainExplorerAdapter.h  BlockChainExplorerWorker.cpp  BlockChainExplorerWorker.h  CommonNodeAdapter.cpp  CommonNodeAdapter.h  CryptoNoteAdapter.cpp  CryptoNoteAdapter.h  GuardExecutor.cpp  GuardExecutor.h  InProcessNodeAdapter.cpp  InProcessNodeAdapter.h  InProcessNodeWorker.cpp  InProcessNodeWorker.h  ProxyRpcNodeAdapter.cpp  ProxyRpcNodeAdapter.h  ProxyRpcNodeWorker.cpp  ProxyRpcNodeWorker.h  SemaphoreUtils.cpp  SemaphoreUtils.h  WalletGreenAdapter.cpp  WalletGreenAdapter.h  WalletGreenWorker.cpp  WalletGreenWorker.h
src/Gui/AddressBook/: AddressBookDelegate.cpp  AddressBookDelegate.h  AddressBookFrame.cpp  AddressBookFrame.h  DonationColumnDelegate.cpp  DonationColumnDelegate.h  NewAddressDialog.cpp  NewAddressDialog.h  ui_NewAddressDialog.h
src/Gui/BlockchainExplorer/: BlockDetailsDialog.cpp  BlockDetailsDialog.h  BlockExplorerFrame.cpp  BlockExplorerFrame.h  FilteredBlockModel.cpp  FilteredBlockModel.h  TransactionsBlockModel.cpp  TransactionsBlockModel.h  WindowedBlockModel.cpp  WindowedBlockModel.h
src/Gui/Common/: AboutDialog.cpp  AboutDialog.h  AboutDialog.ui  AddressBookDialog.cpp  AddressBookDialog.h  BlockchainInstaller.cpp  BlockchainInstaller.h  ChangePasswordDialog.cpp  ChangePasswordDialog.h  ClearableLineEdit.cpp  ClearableLineEdit.h  CopyColumnDelegate.cpp  CopyColumnDelegate.h  CopyMagicLabel.cpp  CopyMagicLabel.h  ExitWidget.cpp  ExitWidget.h  ExitWidget.ui  GlassFrame.cpp  GlassFrame.h  LinkLikeColumnDelegate.cpp  LinkLikeColumnDelegate.h  MagicLabel.cpp  MagicLabel.h  NewPasswordDialog.cpp  NewPasswordDialog.h  NewTransactionDelegate.cpp  NewTransactionDelegate.h  NewsFrame.cpp  NewsFrame.h  OpenUriDialog.cpp  P2pBindPortErrorDialog.cpp  P2pBindPortErrorDialog.h  PoolTransactionDetailsDialog.cpp  PoolTransactionDetailsDialog.h  QuestionDialog.cpp  QuestionDialog.h  ResizableScrollArea.cpp  ResizableScrollArea.h  RightAlignmentColumnDelegate.cpp  (+42 more)
src/Gui/MainWindow/: MainWindow.cpp  MainWindow.h  MainWindow.ui  WalletStatusBar.cpp  WalletStatusBar.h  ui_MainWindow.h
src/Gui/Mining/: MinerDelegate.cpp  MinerDelegate.h  MiningFrame.cpp  MiningFrame.h  PoolHeaderView.cpp  PoolHeaderView.h  PoolTreeView.cpp  PoolTreeView.h
src/Gui/NoWallet/: NoWalletFrame.cpp  NoWalletFrame.h  NoWalletFrame.ui  ui_NoWalletFrame.h
src/Gui/Options/: ConnectionOptionsFrame.cpp  ConnectionOptionsFrame.h  ConnectionOptionsFrame.ui  DonationAddressesModel.cpp  DonationAddressesModel.h  DonationOptionsFrame.cpp  DonationOptionsFrame.h  DonationOptionsFrame.ui  IOptionsPage.h  OptimizationOptionsFrame.cpp  OptimizationOptionsFrame.h  OptimizationOptionsFrame.ui  OptionsDialog.cpp  OptionsDialog.h  PrivacyFrame.cpp  PrivacyFrame.h  PrivacyFrame.ui  ui_ConnectionOptionsFrame.h  ui_DonationOptionsFrame.h  ui_OptimizationOptionsFrame.h  ui_PrivacyFrame.h
src/Gui/Overview/: OverviewFrame.cpp  OverviewFrame.h  OverviewHeaderFrame.cpp  OverviewHeaderFrame.h  OverviewHeaderGlassFrame.cpp  OverviewHeaderGlassFrame.h  OverviewTransactionPoolModel.cpp  OverviewTransactionPoolModel.h  OverviewTransactionPoolTreeView.cpp  OverviewTransactionPoolTreeView.h  RecentTransactionsModel.cpp  RecentTransactionsModel.h
src/Gui/Receive/: ReceiveFrame.cpp  ReceiveFrame.ui  ui_ReceiveFrame.h
src/Gui/Send/: SendFrame.cpp  SendFrame.h  SendFrame.ui  SendGlassFrame.cpp  SendGlassFrame.h  TransferFrame.cpp  TransferFrame.h  ui_SendFrame.h  ui_TransferFrame.h
src/Gui/Transactions/: DrawableTransfersModel.cpp  DrawableTransfersModel.h  FilteredByAddressTransactionsModel.cpp  FilteredByAddressTransactionsModel.h  FilteredByAgeTransactionsModel.cpp  FilteredByAgeTransactionsModel.h  FilteredByHashTransactionsModel.cpp  FilteredByHashTransactionsModel.h  FilteredByPeriodTransactionsModel.cpp  TransactionsDelegate.cpp  (+8 more)
src/Miner/: Miner.cpp  Miner.h  StratumClient.cpp  StratumClient.h  Worker.cpp  Worker.h
src/Models/: AddressBookModel.cpp  AddressBookModel.h  BlockchainModel.cpp  BlockchainModel.h  FusionTransactionsFilterModel.cpp  FusionTransactionsFilterModel.h  MinerModel.cpp  MinerModel.h  NodeStateModel.cpp  NodeStateModel.h  SortedAddressBookModel.cpp  SortedAddressBookModel.h  SortedTransactionsModel.cpp  SortedTransactionsModel.h  TransactionPoolModel.cpp  TransactionPoolModel.h  TransactionsModel.cpp  TransactionsModel.h  TransfersModel.cpp  TransfersModel.h  WalletStateModel.cpp  WalletStateModel.h
src/OpenAlias/: DnsLookup.cpp
src/QJsonRpc/: JsonRpcNotification.cpp  JsonRpcNotification.h  JsonRpcObject.cpp  JsonRpcObject.h  JsonRpcObjectFactory.cpp  JsonRpcObjectFactory.h  JsonRpcRequest.cpp  JsonRpcRequest.h  JsonRpcResponse.cpp  JsonRpcResponse.h  JsonRpcServer.cpp  JsonRpcServer.h
src/Settings/: Settings.cpp  Settings.h
src/Style/: DarkStyle.cpp  DarkStyle.h  LightStyle.cpp  LightStyle.h  Style.cpp  Style.h
src/WalletLogger/: WalletLogger.cpp  WalletLogger.h
src/images/: adon.icns
